[project]
name = "perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>",
           "Johann Tuffe <tafia973@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
quick-protobuf = { path = "../quick-protobuf" }
rand = "0.5.5"
bytes = "1"
protobuf = "3.2.0"
prost = "0.11.0"

[build-dependencies]
pb-rs = { path = "../pb-rs" }
prost-build = "0.9.0"
protobuf-codegen = "3.2.0"
[features]
